<resources>
    <string name="app_name">Beep</string>
    <string name="signup">Sign Up</string>
    <string name="admin_login">Login as Admin</string>
    <string name="user_login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Log In!</string>
    <string name="name">Full Name</string>
    <string name="con_pass">Confirm Password</string>
    <string name="action_settings">Settings</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="branch">Branch</string>
</resources>